syntax = "proto3";

option go_package = "github.com/PasanovicHalid/XWS_Project/BookingService/SharedLibraries/gRPC/accommodation";

package accommodation;

import "google/api/annotations.proto";
import "common/common.proto";

service AccommodationService {
    rpc TempServiceMethod(TempMessage) returns (common.RequestResult) {
        option (google.api.http) = {
            get: "/api/accommodation/temp/{poruka}"
        };
    }
}

message TempMessage {
    string poruka = 1;
}
